--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -11,18 +11,27 @@ html {
     -webkit-text-size-adjust: 100%;
     -moz-tab-size: 4;
     tab-size: 4;
-    font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-        Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+    font-family: $font-family;
+
+    font-size: 100%;
+
+    @include tablet {
+        font-size: 80%;
+    }
+
+    @include mobile {
+        fontsize: 60%;
+    }
 }
 
 body {
     margin: 0;
     line-height: inherit;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
     ::-webkit-scrollbar {
         display: none;
     }
-    -ms-overflow-style: none;
-    scrollbar-width: none;
 }
 
 h1,
