--- a/styles/scss/_variables.scss
+++ b/styles/scss/_variables.scss
@@ -1,4 +1,22 @@
-// Screens breakpoints.
+// ==========================================================================
+// ================================ Font. ===================================
+// ==========================================================================
+$font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+
+// ==========================================================================
+// =============================== Colors. ==================================
+// ==========================================================================
+$primary: #ff0000;
+
+:export {
+    primary: $primary;
+}
+
+// ==========================================================================
+// ========================= Screens breakpoints. ===========================
+// ==========================================================================
+
 $sm: "640px"; // Mobile
 $md: "768px"; // Tables
 $lg: "1024px"; // Portable
