--- a/styles/scss/_variables.scss
+++ b/styles/scss/_variables.scss
@@ -7,14 +7,27 @@ $font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
 // ==========================================================================
 // =============================== Colors. ==================================
 // ==========================================================================
-$primary: #ff0000;
+$primary: #dc2626;
+$secondary: #ef4444;
+
+$white: #ffffff;
+$gray_50: #f8fafc;
+$gray_100: #f1f5f9;
+$gray_200: #e2e8f0;
+$gray_300: #cbd5e1;
+$gray_400: #94a3b8;
+$gray_500: #64748b;
+$gray_600: #475569;
+$gray_700: #334155;
+$gray_800: #1e293b;
+$gray_900: #0f172a;
 
 :export {
     primary: $primary;
 }
 
 // ==========================================================================
-// ========================= Screens breakpoints. ===========================
+// ========================= Screen breakpoints. ============================
 // ==========================================================================
 
 $sm: "640px"; // Mobile
