--- a/components/atoms/button/index.module.scss
+++ b/components/atoms/button/index.module.scss
@@ -2,7 +2,7 @@
 @use "../../../styles/scss/variables" as *;
 
 // Standart button style.
-.btn {
+.button {
     text-align: center;
     font-weight: 500;
     padding: 0.5rem 1rem;
