--- a/components/atoms/link/index.module.scss
+++ b/components/atoms/link/index.module.scss
@@ -5,12 +5,13 @@
 .link {
     font-weight: 500;
     letter-spacing: 0.05rem;
-    color: darken($white, 10%);
-    &:hover {
-        color: $white;
-    }
 }
 
 .link_primary {
-    color: #ffffff;
+    color: darken($white, 10%);
+    transition: all 0.05s ease-in-out;
+
+    &:hover {
+        color: $white;
+    }
 }
